More functionality to mining, enchants are slowly being added. Performance improvements.